# bootstrapx

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml
benchmarks/: bench_coverage.py  bench_speed.py  index.html
changelog/: index.html
docs/: benchmarks.md  changelog.md  getting-started.md  index.md  methods.md  reference.md
getting-started/: index.html
methods/: index.html
notebooks/: 01_quickstart.ipynb  02_benchmark.ipynb
reference/: index.html
search/: search_index.json
src/bootstrapx/: __init__.py  api.py  utils.py
src/bootstrapx/engine/: backend.py
src/bootstrapx/generators/: hierarchical.py  iid.py  timeseries.py
src/bootstrapx/stats/: confidence.py
tests/: conftest.py  test_backend.py  test_confidence.py  test_edge_cases.py  test_hierarchical.py  test_iid.py  test_timeseries.py  test_validation.py
